Add proper start date to Returns API